--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,7 @@
     width: 70%;
     margin-top: 1.5em;
     font-size: 1.2em;
+    text-align: center;
 }
 
 @media screen and (max-width: 500px) {
